# lsdiff

./: Cargo.toml  README.md
src/: filesystem.rs  main.rs  output.rs
